# svd_gdb

./: .gitmodules  MANIFEST.in  README.rst  other_approaches.rst  pyproject.toml  setup.py
svd_gdb/: __init__.py  gdb.py  make_stub.py  mutable_number.py  svd_gdb.py
svd_gdb/drivers/: base.py  nrf5x.py  stm32.py
svd_gdb/github_dl/: cached.py  github_dl.py  registry.txt  revhash.txt  update_registry.py
