[project]
name = "svd_gdb"
version = "0.0.5"
authors = [
  { name="Mark Rages", email="markrages@gmail.com" },
]
description = "Python interface to SVD files through GDB"
readme = "README.rst"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
]

dependencies = [
    "pySerial",
    "cmsis_svd @ git+https://github.com/posborne/cmsis-svd@9c416c5ff18e7d272a792c13bd235ebe30eef816#subdirectory=python",
]


[project.urls]
"Homepage" = "https://github.com/markrages/svd_gdb/"
"Bug Tracker" = "https://github.com/markrages/svd_gdb/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


